--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nomflix",
   "version": "0.1.0",
   "private": true,
-  "repository":"https://github.com/anycsj/Netflix",
+  "repository": "https://github.com/anycsj/Netflix",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -12,7 +12,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4",
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
