--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nomflix",
+  "name": "SJ_flix",
   "version": "0.1.0",
   "private": true,
   "repository": "https://github.com/anycsj/Netflix",
